--- a/templates/workflow-worker.tmpl
+++ b/templates/workflow-worker.tmpl
@@ -5,7 +5,7 @@ tasks:
 - name: "k8s-installation"
   worker: "{{index .Targets "machine1" "ipv4_addr"}}"
   environment:
-    HEGEL_URL: <hegel url>
+    HEGEL_URL: ${HEGEL}
     NODE_IP: "{{index .Targets "machine1" "ipv4_addr"}}"
   volumes:
     - /dev:/dev
@@ -17,25 +17,25 @@ tasks:
     image: install-os
     timeout: 800
     environment:
-       OS_URL: <nginx url with path to raspbian>
+       OS_URL: ${OS}
   - name: "os-configure"
     image: configure-os
     timeout: 120
     environment:
-       WIFI_SSID: <optional wifi ssid>
-       WIFI_PSK: <optional wifi password>
-       WIFI_COUNTRY: <optional wifi country code>
+       WIFI_SSID: ${SSID}
+       WIFI_PSK: ${PSK}
+       WIFI_COUNTRY: ${COUNTRY}
   - name: "install-k8s"
     image: install-k8s
     timeout: 600
     environment:
-       K8S_CLUSTER_SECRET: <k8s secret token>
-       K3S_URL: <k3s master url>
+       K8S_CLUSTER_SECRET: ${SECRET}
+       K3S_URL: ${K3S}
   - name: "reboot"
     image: reboot
     timeout: 120
     environment:
-       REGISTRY: <registry url>
+       REGISTRY: ${REGISTRY}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/docker:/etc/docker
